# xul

./: .gitignore  README.md  main.py  pyproject.toml  summary.md
scripts/: export_github_issues_prs.py  export_github_user_contexts.py  export_slack_user_contexts.py  list_dump_users.py
slack/: index.js  package-lock.json  package.json
tests/: test_slack_bot.py  test_user_context_export.py
xul_slackbot/: __init__.py  bot.py  config.py  lancedb.py  logging.py  necromancy.py  summon.py  user_context_export.py
