[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "slack-bolt>=1.27.0",
]

[project.scripts]
slack-bot = "xul_slackbot.bot:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["xul_slackbot"]
